task-EnGX5by0 fix extra space in input and textarea

--- a/src/client/components/info.css
+++ b/src/client/components/info.css
@@ -5,3 +5,9 @@
     background-color: red;
     border: 2px solid black;
 }
+input {
+    width: 96px;
+}
+textarea {
+    width: 94px;
+}
